[gd_scene load_steps=36 format=3 uid="uid://sm8dj26r754b"]

[ext_resource type="Script" uid="uid://ha8vg0xmcgct" path="res://scenes/slime.gd" id="1_p2gj0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_371uh"]
load_path = "res://.godot/imported/slime.png-94dab37bc2fdc1a4889fd9eb4d4b53fd.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gj0"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t6e"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbccl"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24adn"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8bnk"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmbt"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_371uh"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm07"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvl"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl0w"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur4c"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7ff"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8sfj"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwlqs"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwlg4"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sdgb"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrr3x"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyfvk"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = SubResource("CompressedTexture2D_371uh")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g40cl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbccl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24adn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8bnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmbt")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_371uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v7ff")
}],
"loop": true,
"name": &"front_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8sfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwlqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwlg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sdgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyfvk")
}],
"loop": true,
"name": &"side_chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2gj0"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_371uh"]
radius = 38.3275

[node name="slime" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_p2gj0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g40cl")
animation = &"side_chase"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p2gj0")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="player_detection_collision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_371uh")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]

[node name="Attack_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
